--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -9,7 +9,11 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Generate Snake SVG
+        uses: Platane/snk@v3
         with:
           github_user_name: chandrashekar0624
           outputs: |
